# tip-tune

./: BUGS_FIXED.md  BUG_ANALYSIS_AND_FIXES.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  OFFLINE_QUEUE_INDEX.md  OFFLINE_QUEUE_PR_SUMMARY.md  PWA_BACKGROUND_SYNC_COMPLETE.md  README.md  TEST_EXECUTION_SUMMARY.md  VALIDATION_REPORT.md
backend/: .eslintrc.js  (+12 more)
contracts/: CHECKLIST.md  Cargo.toml  QUICKSTART.md  README.md  TESTING.md  WORKSPACE_OVERVIEW.md
contracts/arithmetic-utils/src/: lib.rs
contracts/artist-allowlist/src/: access.rs  indexes.rs  lib.rs  storage.rs  test.rs
contracts/auto-royalty-distribution/src/: lib.rs  queries.rs  storage.rs  test.rs
contracts/drip-tip-matching/src/: custody.rs  errors.rs  indexes.rs  lib.rs  queries.rs  types.rs
contracts/drip-tip-matching/tests/: matching_pool_tests.rs
contracts/fan-token/src/: access.rs  events.rs  lib.rs  metadata.rs  queries.rs  storage.rs  test.rs  types.rs
contracts/governance/src/: event.rs  lib.rs  storage.rs
contracts/lottery/src/: events.rs  lib.rs
contracts/lottery/tests/: lottery_tests.rs
contracts/reward-token/src/: allowance.rs  errors.rs  lib.rs  metadata.rs  roles.rs  storage.rs  test.rs
contracts/royalty-split/src/: events.rs  lib.rs  test.rs
contracts/tip-bridge/src/: errors.rs  event.rs  lib.rs  storage.rs
contracts/tip-escrow/src/: escrow_actions.rs  events.rs  lib.rs  test.rs  types.rs
contracts/tip-goal-campaign/src/: indexes.rs  lib.rs  rent.rs  storage.rs  test.rs
contracts/tip-nft-badge/src/: catalog.rs  lib.rs  test.rs
(+234 files in other folders)
